update doc to support Java 17